@@ -1,3 +1,8 @@
+2004-07-19  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FAQ (7.12):
+	updated
+
 2004-05-31  Dan Espen  <dane@mk.telcordia.com>
 
 	* todo-2.6: Finished item E.4.
